WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212404
[WPE] REGRESSION(
r253675
) Crash when using threaded rendering
https://bugs.webkit.org/show_bug.cgi?id=212404
Summary
[WPE] REGRESSION(r253675) Crash when using threaded rendering
Miguel Gomez
Reported
2020-05-27 05:06:21 PDT
r253675
modified ImageBufferCairo::draw and ImageBufferCairo::drawPattern (currently ImageBufferCairoBackend::draw and ImageBufferCairoBackend::drawPattern) to use cairo and the platformContext to paint instead of using the GraphicsContext methods. While this is ok is most of the cases, when using threaded rendering, all the drawing must happen through the GraphicsContext so the rendering commands can be recorded and replayed afterwards. Even more, the GraphicsContextImpl used in this case is a CairoOperationRecorder, which doesn't even have a platformContext. So this ends crashing.
Attachments
Patch
(3.59 KB, patch)
2020-05-27 05:11 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2020-05-27 05:11:36 PDT
Created
attachment 400322
[details]
Patch
EWS
Comment 2
2020-05-27 06:25:49 PDT
Committed
r262194
: <
https://trac.webkit.org/changeset/262194
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400322
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug