[WPE] REGRESSION(r253675) Crash when using threaded rendering https://bugs.webkit.org/show_bug.cgi?id=212404

Reviewed by Carlos Garcia Campos.

Check whether the GraphicsContext has a PlatformGraphicsContext before trying to paint with
it. If there's no PlatformGraphicsContext, paint using the GraphicsContext methods instead.

* platform/graphics/cairo/ImageBufferCairoBackend.cpp:
(WebCore::ImageBufferCairoBackend::draw):
(WebCore::ImageBufferCairoBackend::drawPattern):


Canonical link: https://commits.webkit.org/225254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262194 268f45cc-cd09-0410-ab3c-d52691b4dbfc